Fixed overflow bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,8 @@
 }
 
 body {
-	overflow: hidden;
+	overflow-x: hidden;
+	background-color: $white;
 }
 
 .text-wrapper {
